...
                borderRadius: BorderRadius.circular(16),
              ),
              child: Column(
                crossAxisAlignment: CrossAxisAlignment.start,
                children: const [
                  Text(
                    'Witaj na poligonie testowym!',
                    style: TextStyle(color: Colors.white, fontSize: 20, fontWeight: FontWeight.bold),
                  ),
                  SizedBox(height: 6),
                  Text(
                    'Aplikacja zaprojektowana specjalnie do nauki i treningu automatyzacji testów mobilnych (flutter_test, Patrol, Maestro, Appium / Pytest). '
                    'Wybierz moduł poniżej lub skorzystaj z żółtego przycisku w prawym dolnym rogu (Test Inspector), aby podejrzeć selektory.',
...
